<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cartaz">

    <TextView
        android:id="@+id/txtlocalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtlocalizar"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <ImageView
        android:id="@+id/peca1"
        android:layout_width="110dp"
        android:layout_height="158dp"
        android:contentDescription="@string/peca1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235"
        app:srcCompat="@drawable/peca1" />

    <ImageView
        android:id="@+id/peca2"
        android:layout_width="116dp"
        android:layout_height="157dp"
        android:contentDescription="@string/peca2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235"
        app:srcCompat="@drawable/peca2" />

    <ImageView
        android:id="@+id/peca3"
        android:layout_width="119dp"
        android:layout_height="158dp"
        android:contentDescription="@string/peca4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588"
        app:srcCompat="@drawable/peca3" />

    <ImageView
        android:id="@+id/peca4"
        android:layout_width="119dp"
        android:layout_height="160dp"
        android:contentDescription="@string/peca3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        app:srcCompat="@drawable/peca4" />

    <TextView
        android:id="@+id/txtpecasemcartaz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtpecasemcartaz"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/txtlocalizacaoreal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtlocalizacaoreal"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

</androidx.constraintlayout.widget.ConstraintLayout>