<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnfale"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:contentDescription="@string/btnfale"
        android:onClick="clickFale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        app:srcCompat="@drawable/faleconosco" />

    <ImageButton
        android:id="@+id/btnlogin"
        android:layout_width="82dp"
        android:layout_height="84dp"
        android:contentDescription="@string/btnlogin"
        android:onClick="clickLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        app:srcCompat="@drawable/cadastro" />

    <ImageButton
        android:id="@+id/btncartaz"
        android:layout_width="84dp"
        android:layout_height="83dp"
        android:contentDescription="@string/btncartaz"
        android:onClick="clickCartaz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632"
        app:srcCompat="@drawable/cartaz" />

    <TextView
        android:id="@+id/txtteatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mudarcor"
        android:text="@string/txtteatro"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        tools:text="@string/txtteatro" />

    <ImageButton
        android:id="@+id/btnnot"
        android:layout_width="83dp"
        android:layout_height="86dp"
        android:contentDescription="@string/btnnot"
        android:onClick="clickNoticias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631"
        app:srcCompat="@drawable/noticias" />

    <TextView
        android:id="@+id/txtfale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtfale"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417"
        tools:text="@string/txtfale" />

    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtlogin"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417"
        tools:text="@string/txtlogin" />

    <TextView
        android:id="@+id/txtpecas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtpecas"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716"
        tools:text="@string/txtpecas" />

    <TextView
        android:id="@+id/txtnot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtnot"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"
        tools:text="@string/txtnot" />

</androidx.constraintlayout.widget.ConstraintLayout>