<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faleconosco">

    <TextView
        android:id="@+id/txtfaleconosco"
        android:layout_width="184dp"
        android:layout_height="39dp"
        android:text="@string/txtfaleconosco"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        tools:text="@string/txtfaleconosco" />

    <TextView
        android:id="@+id/txtemail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtemail2"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199"
        tools:text="@string/txtemail2" />

    <TextView
        android:id="@+id/txtemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtemail"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199"
        tools:text="@string/txtemail" />

    <TextView
        android:id="@+id/txttelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txttelefone"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"
        tools:text="@string/txttelefone" />

    <TextView
        android:id="@+id/txtnumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtnumero"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"
        tools:text="@string/txtnumero" />

    <TextView
        android:id="@+id/txtinstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtinstagram"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363"
        tools:text="@string/txtinstagram" />

    <ImageButton
        android:id="@+id/btninsta"
        android:layout_width="49dp"
        android:layout_height="53dp"
        android:contentDescription="@string/btninsta"
        android:onClick="btninsta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362"
        app:srcCompat="@drawable/instagram" />

</androidx.constraintlayout.widget.ConstraintLayout>