<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtlogar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtlogar"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        tools:text="@string/txtlogar" />

    <EditText
        android:id="@+id/digitarsenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/digitarsenha"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />

    <EditText
        android:id="@+id/digitaremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/digitaremail"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <TextView
        android:id="@+id/txtemaillogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtemaillogin"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268"
        tools:text="@string/txtemaillogin" />

    <TextView
        android:id="@+id/txtsenhalogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtsenhalogin"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473"
        tools:text="@string/txtsenhalogin" />

    <Button
        android:id="@+id/btnentrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnentrar"
        android:text="@string/btnentrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />
</androidx.constraintlayout.widget.ConstraintLayout>